add solution_gen.cpp use build_findSolution.sh to compile and run it. changed json2verilog.cpp to generate a conjunction of all constraints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,5 +92,6 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "variant": "cpp"
-    }
+    },
+    "cmake.ignoreCMakeListsMissing": true
 }
